--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <body>
 	
 	<div id="logo">
-
-		<h1><img align:"left" src="images/logo.png">Jigsaw <h4>A Perfect Fit</h4></h1>
-			</div>
+		<img align:"left" src="images/logo.png">
+		</div>
 
 	<div class="container1">
 	   	<div class="business">Business looking for the perfect fit?<br/>
